adding notes model

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.31",laravel_course_practice.sessions
+        "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
